--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb+srv://raghuttama03:samera2007@cluster0.sylhh.mongodb.net/mentor
+MONGODB_URI=mongodb+srv://raghuttama03:samera2007@cluster0.sylhh.mongodb.net/mentor
+JWT_SECRET="samera"
