--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^4.1.8",
+    "util": "^0.12.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vite": "^6.3.5"
   }
 }
