--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,4 +16,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run : cd server npm run dev
+      - name : Setup server
+        run : |
+         cd server
+         npm install
+         npm run dev
